netpol-final-challenge/charms-and-students.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: charms-and-students
  namespace: charms
spec:
  podSelector: {}
  ingress:
    - from:
      - podSelector:
          matchLabels:
            hogwarts: admitted
  policyTypes:
  - Ingress
