netpol-final-challenge/charms-no-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: charms-no-egress
  namespace: charms
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: charms
  policyTypes:
  - Egress
