netpol-final-challenge/darkarts-noaccess.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: darkarts-no-access
  namespace: darkarts
spec:
  podSelector: {}
  ingress: []
  egress: []
  policyTypes:
  - Ingress
  - Egress
