netpol-final-challenge/potions-port-rule.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: potions-port-rule
  namespace: potions
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: darkarts
      ports:
      - port: 80
        protocol: TCP
  policyTypes:
  - Egress
